--- a/.github/workflows/devops-starter-workflow.yml
+++ b/.github/workflows/devops-starter-workflow.yml
@@ -113,8 +113,7 @@ jobs:
     - name: set up test environment and run tests
       continue-on-error: false
       run: |
-        pushd .
-        cd $env:temp
+        pushd $env:temp
         $Path = $env:TEMP; $Installer = "chrome_installer.exe"; Invoke-WebRequest "https://dl.google.com/chrome/install/latest/chrome_installer.exe" -OutFile $Path$Installer; Start-Process -FilePath $Path$Installer -Args "/silent /install" -Verb RunAs -Wait; Remove-Item $Path$Installer
         Invoke-WebRequest https://chromedriver.storage.googleapis.com/86.0.4240.22/chromedriver_win32.zip -outFile chromedriver.zip
         Expand-Archive -Path chromedriver.zip
